# shop_assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LANGGRAPH_OPTIMIZATION_PLAN.md  README.md  alembic.ini  comprehensive_shopify_schema.md  corrected_sample_data.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  price_filtering_improvement_summary.md  pyproject.toml  pytest.ini  requiment_output_to_model.json  requirements-dev.txt  requirements-docker.txt  requirements-prod.txt  requirements.txt  research.MD  run.py  validation_results.json
.github/workflows/: ci-cd.yml  test-pipeline.yml
alembic/: env.py
alembic/versions/: 002_consolidated_schema.py  b947dd71c64d_remove_conversation_analytics_foreign_.py
alembic/versions/old_migrations/: 001_initial_migration.py  47cdd40a14b1_add_conversation_analytics_tables.py  a4178eb31991_add_missing_conversation_fields.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py
app/core/: __init__.py  config.py  dependencies.py
app/core/api/: __init__.py  batch_operations.py  cache_manager.py  middleware.py  monitoring.py  pagination.py  rate_limiter.py  streaming.py  versioning.py
app/core/webhooks/: __init__.py  manager.py  models.py
app/db/: __init__.py  base.py  session.py
app/docs/: documentation.py  openapi.py
app/integrations/shopify/: __init__.py  client.py  exceptions.py  graphql_queries.py  models.py  page_policies.py  parsers.py  service.py  service_old.py  webhooks.py
app/middleware/: __init__.py  logging.py  rate_limiting.py  security.py  security_middleware.py  validation.py
app/monitoring/: metrics.py
app/schemas/: __init__.py  ai.py  auth.py  chat.py
app/services/: __init__.py  cache_service.py  conversation_analytics.py  dialogue.py  embedding.py  enterprise_security.py  langgraph_cache.py  langgraph_checkpoint.py  langgraph_monitoring.py  langgraph_nodes.py  langgraph_orchestrator.py  langgraph_state.py  llm.py  memory.py  nlu.py  policy_service.py  quality.py  tool_dialogue_manager_streamlined.py
app/services/tool_system/: __init__.py  executor_streamlined.py  llm_integration_streamlined.py  tools_streamlined.py
app/static/: chat.js  index.html  styles.css
app/testing/: load_testing.py
app/tests/: __init__.py  test_main.py  test_stage5_nlu.py
app/utils/: error_handlers.py  exceptions.py
docs/: Plan.MD  advanced-api-features.md  shopify-integration.md  testing-strategy.md
scripts/: debug_flows.py  deploy.sh  run_and_test.py  run_db_only.py  system_check.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_complete_conversation_flow.py
tests/integration/: __init__.py  test_api_integration.py  test_intelligence_integration.py
tests/performance/: __init__.py  test_load_testing.py
tests/security/: __init__.py  test_security_audit.py
tests/uat/: __init__.py  test_user_scenarios.py
tests/unit/: __init__.py  test_api_endpoints.py  test_intelligence.py  test_llm_manager.py
(+30 files in other folders)
